@@ -239,13 +239,14 @@ extern bool				highLight;
 extern bool				noSyntax;
 extern bool				singleUse;
 extern unsigned int		tabWidth;
-extern char			*fontAndSize;
-extern char			*terminalCommand;
-extern char			*rootCommand;
+extern unsigned int		tabsSize;
+extern char				*fontAndSize;
+extern char				*terminalCommand;
+extern char				*rootCommand;
 extern unsigned int		depth;
 extern bool				onExitSaveSession;
 extern bool				restoreBookmarks;
-extern char			*styleName;
+extern char				*styleName;
 extern bool				noDuplicates;
 extern bool				noWarnings;
 extern bool				readLinkFirst;
