@@ -1,4 +1,5 @@
 0.3.2
+Added notebook tab size adjustment to prefs.
 Added extra debian instructions for gtk 3 in INSTALL.
 Squeezed tabs in gtk3.
 Fixed setting font properly in gtk 3.
